# Computer-Graphics---Final-Project

./: .gitignore  CMakeLists.txt  README.md  useful_links
final_project/: box.frag  box.vert  final_project.cpp  stb_image_resize.h  tinygltf_implementation.cpp
final_project/3D_assets/alien/: alien.gltf
final_project/3D_assets/island/: island.gltf
final_project/3D_assets/island/blender/: untitled.blend
final_project/3D_objects/cube/: Cube.cpp  Cube.h
final_project/3D_objects/gltf_object/: GltfObject.cpp  GltfObject.h
final_project/3D_objects/graphics_object/: GraphicsObject.cpp  GraphicsObject.h
final_project/3D_objects/skybox/: SkyBox.cpp  SkyBox.h
final_project/3d_assets/bot/: scene.gltf
final_project/3d_assets/home/: untitled.gltf
final_project/3d_assets/island/: untitled.gltf
final_project/3d_assets/island/blender/: untitled.blend1
final_project/3d_assets/junction/: untitled.gltf
final_project/3d_assets/landing_area/: untitled.gltf
final_project/3d_assets/reactor/: untitled.gltf
final_project/3d_assets/research_center/: untitled.gltf
final_project/3d_assets/shiba/: license.txt  scene.gltf
final_project/3d_assets/test/: license.txt  scene.gltf  untitled.gltf
final_project/3d_assets/tracks/: untitled.gltf
final_project/3d_assets/tree/: scene.gltf  untitled.gltf
final_project/3d_assets/zombie/: untitled.gltf
final_project/camera/: camera.cpp  camera.h
final_project/light/: Light.cpp  Light.h
final_project/light/light/: Light.cpp  Light.h
final_project/light/lights_manager/: LightsManager.cpp  LightsManager.h
final_project/lighting/light/: Light.cpp  Light.h
final_project/lighting/lights_manager/: LightsManager.cpp  LightsManager.h
final_project/objects/cube/: Cube.cpp  Cube.h
final_project/objects/gltf_object/: GltfObject.cpp  GltfObject.h
final_project/objects/graphics_object/: GraphicsObject.cpp  GraphicsObject.h
final_project/objects/shaders/: box.vert
final_project/objects/skybox/: SkyBox.cpp  SkyBox.h
final_project/passes/depth_pass/: DepthPass.cpp  DepthPass.h
final_project/passes/geometry_pass/: GeometryPass.cpp  GeometryPass.h
final_project/passes/lighting_pass/: LightingPass.cpp  LightingPass.h
final_project/passes/render_pass/: RenderPass.cpp  RenderPass.h
final_project/passes/ssao_blur_pass/: SSAOBlurPass.cpp  SSAOBlurPass.h
final_project/passes/ssao_pass/: SSAOPass.cpp  SSAOPass.h
final_project/render/: shader.cpp  shader.h
final_project/shaders/: depth.vert  geometry.frag  geometry.vert  lighting.frag  ssao.frag
final_project/shaders/bot/: bot.frag  bot.vert  gltf.frag  gltf.vert  test.frag
final_project/shaders/skybox/: box.frag
final_project/ssao/: ssao.cpp  ssao.h
final_project/texture_utils/: texture_utils.cpp  texture_utils.h
final_project/utils/: renderQuad.cpp  renderQuad.h
final_project/view_points/camera/: camera.cpp  camera.h
final_project/view_points/lights/: LightTypes.h
final_project/view_points/lights/light/: Light.cpp  Light.h
final_project/view_points/lights/spot_light/: Spotlight.cpp  Spotlight.h
final_project/view_points/view_point/: ViewPoint.cpp  ViewPoint.h
